--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-It is a basic exercise to check if number is divisible by 3, 5 or both. 
+It is a basic exercise to check if number is divisible by 3, 5 or both, in this case up to 20.
