--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-It is a basic exercise to check if number is divisible by 3, 5 or both, in this case up to 20.
+## Intro ##
+It's very common to see this exercise in technical interviews 
+
+## Explanation ##
+So this is a basic exercise to check if number is divisible by 3, 5 or both, in this case up to 20.
